make toc column a bit smaller to avoid overlapping scrollbar
Former-commit-id: f351b363449d49411cfe7fe4260ebcff52a2901d
Former-commit-id: 8193c2e2acd366f26ec711c5fe1466fb1a22b4f4

--- a/_includes/css/sotm2020.css
+++ b/_includes/css/sotm2020.css
@@ -44,6 +44,8 @@ div.affix {
   bottom: 0;
   height: 80%;
   height: calc(100% - 120px);
+  width: calc(25% - 20px);
+  max-width: 280px;
 }
 
 @media(max-width:767px) {
